# Spaceshare

./: README.md  cypress.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
spaceshare/: __init__.py  config.py  model.py
spaceshare/api/: __init__.py  posts.py
spaceshare/js/: main.jsx  post.jsx
spaceshare/static/css/: style.css
spaceshare/static/js/: script.js
spaceshare/templates/: account_created.html  create.html  index.html  login.html  map.html  otp.html  password.html  phone_number.html  profile.html  set_city.html  set_password.html
spaceshare/views/: __init__.py  accounts.py  index.py
sql/: data.sql  schema.sql
tests/: conftest.py  test_style.py
tests/cypress/e2e/: test_index_public.cy.js  test_slow_server_index_public.cy.js
tests/cypress/support/: commands.js
tests/testdata/: pylintrc
var/: spaceshare.sqlite3
